refactor: 프롬프트 기록 조회 시 내역이 없는 경우 빈 리스트 반환하도록 변경